--- a/roles/frontend/vars/main.yaml
+++ b/roles/frontend/vars/main.yaml
@@ -1,1 +1,3 @@
-BACKEND_HOST: backend.ukom81s.online
+BACKEND_HOST: backend.app-dev.ukom81s.online
+app_location: /usr/share/nginx/html
+component: frontend
