--- a/roles/frontend/tasks/main.yaml
+++ b/roles/frontend/tasks/main.yaml
@@ -27,7 +27,7 @@
 
 - name: copy expense configuration
   ansible.builtin.copy:
-    src: expense.conf
+    src: expense.conf.j2
     dest: /etc/nginx/default.d/expense.conf
 
 - name: restart nginx
