--- a/roles/frontend/tasks/main.yaml
+++ b/roles/frontend/tasks/main.yaml
@@ -31,9 +31,11 @@
     tasks_from: app-pre-req
 
 - name: copy expense configuration
-  ansible.builtin.copy:
+  ansible.builtin.template:
     src: expense.conf.j2
     dest: /etc/nginx/default.d/expense.conf
+  notify: 
+  - Restart nginx
 
 - name: restart nginx
   ansible.builtin.service:
