--- a/roles/frontend/tasks/main.yaml
+++ b/roles/frontend/tasks/main.yaml
@@ -37,9 +37,9 @@
   notify: 
   - Restart nginx
 
-- name: restart nginx
-  ansible.builtin.service:
-    name: nginx
-    state: restarted
+# - name: restart nginx
+#   ansible.builtin.service:
+#     name: nginx
+#     state: restarted
     
     
